# ComputerVision

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt  run.sh
2DProjectiveGeometry/: BUILD.bazel  geometry.py  line.py  main  main.cpp  main.ipynb  math_utils.py  point.cpp  point.py  test_geometry.py  test_line.py  test_point.py
2DProjectiveGeometry/test/: line.py
BikeVO/images/dataset1/: points.pkl
BikeVO/images/dataset2/: points.pkl
BilinearInterpolation/: BUILD.bazel  LinearInterpolation.py  jupyter.py  main.ipynb
Bingham/: BUILD.bazel  bingham.ipynb
CameraCalibration/: camera_calibration.py
CameraModels/: CameraModels.ipynb  main.ipynb
Cartography/: BUILD.bazel
Cartography/ContextualBuildingTypification/: ContextualBuildingTypification.ipynb
Cartography/ContextualBuildingTypification/Inputs/: rivers.gpkg  roads.gpkg
CircleGroup/: BUILD.bazel  CircleGroup.py  Complex.py  main.ipynb
CircleGroup/test/: BUILD.bazel  complex.py
CppExperiments/DesignPatterns/AbstractFactory/: abstractfactory.h
CppExperiments/DesignPatterns/CompositionOverInheritance/: BUILD.bazel
CppExperiments/DesignPatterns/CompositionOverInheritance/test/: BUILD.bazel  test_inheritance.cpp
CppExperiments/DesignPatterns/Factory/: BUILD.bazel  factory.h
CppExperiments/DesignPatterns/Singleton/: BUILD.bazel  singleton.h
CppExperiments/DesignPatterns/Singleton/src/: main.cpp  singleton.cpp
CppExperiments/DesignPatterns/test_bazel/: hello.h
CppExperiments/MoveSemantics/: BUILD.bazel  copy_move_member_functions.cpp
CppExperiments/SmartPointers/: BUILD.bazel
CppExperiments/SmartPointers/src/: uniquePtr.cpp
DesignPatterns/AbstractFactory/: README.md
DesignPatterns/CompositionOverInheritance/: BUILD.bazel  README.md  composition.h  inheritance.cpp  inheritance.h
DesignPatterns/CompositionOverInheritance/src/: main.cpp
DesignPatterns/CompositionOverInheritance/test/: BUILD.bazel  test_composition.cpp  test_inheritance.cpp
DesignPatterns/Factory/: README.md
DesignPatterns/Factory/src/: factory.cpp
DesignPatterns/Singleton/: BUILD.bazel  singleton.h
DesignPatterns/Singleton/src/: main.cpp  singleton.cpp
DesignPatterns/test_bazel/: BUILD.bazel
DesignPatterns/test_bazel/src/: hello.cpp  main.cpp
Docker/: build_with_docker.sh  dockerfile
Docker/Bazel/: build_with_docker.sh  dockerfile
EightPointAlgorithm/: EightPointAlgorithm.ipynb
Generators/: generators.py  main.ipynb
GeometricMedian/: BUILD.bazel  SO3_utils.py  main.ipynb
HomographyBasedCalibration/: HomographyBasedCalibration.ipynb
HomographyComputation/: BUILD.bazel  HomographyComputation.ipynb
ImageMatching/: ImageMatching.ipynb
ImageStitching/: BUILD.bazel  ImageStitching.ipynb
Interpolation/: BUILD.bazel  BilinearInterpolation.py  Interpolation.ipynb  LinearInterpolation.py  main.ipynb
Interpolation/test/: BUILD.bazel  test_LinearInterpolator.py
Mazes/: BUILD.bazel  cell.h  grid.h  m azes.ipynb
Mazes/pybind/: BUILD.bazel  cell_pybind.cpp  grid_pybind.cpp
Mazes/src/: cell.cpp  grid.cpp
Mazes2/: README.md
Mazes2/src/: cell.cpp
Mazes2/test/: BUILD.bazel  test_cell.cpp
MotionModels/: kinematics.py  main.ipynb  motionmodels.py  probabilities.py
ProjectionMatrix/: projection_matrix.ipynb
ProjectiveGeometry/: BUILD.bazel  geometry.py  main  math_utils.py  plotting.py  point.h
ProjectiveGeometry/test/: line.py
Projects/: BUILD.bazel  RotationSandbox.ipynb  median2Dvs3D.ipynb
Quaternions/: main.ipynb  quaternions.py
RamerDouglasPeucker/: main.ipynb
SO3/: SO3.py  main.ipynb
SingleViewMetrology/: single_view_metrology.ipynb
Solvers/: dlt.py
TransformCalculator/: BUILD.bazel  TransformCalculator.ipynb
VisualOdometry/: VisualOdometry_2D_2D.ipynb
lib/CameraModels/: BUILD.bazel
lib/CameraModels/FisheyeModel/: fisheye_model.py
lib/CameraModels/OmnidirectionalModel/: data_production.py  omnidirectional_main.py  omnidirectional_model.py
lib/CameraModels/OmnidirectionalModel/Data/: 0.txt
lib/FeatureDescriptors/: BRIEF.py  BUILD.bazel  ORB.py
lib/GaussianFilters/: AlphaBetaGamma.ipynb  BUILD.bazel
lib/Graph/: BUILD.bazel  graph.py
lib/LinearAlgebra/: BUILD.bazel  LinearAlgebra.ipynb  matrix.cpp  matrix.py
lib/LinearAlgebra/tests/: BUILD.bazel  test_matrix.py
lib/Math/: BUILD.bazel  constants.py  math_utils.py  quaternions.py  triangulation.py
lib/Math/Quaternions/: main.ipynb  quaternions.py
lib/Math/RotationUtils/: rotation_utils.py
lib/Metrics/: BUILD.bazel  L_estimator.cpp  L_estimators.py  M_estimators.py  Metrics.ipynb  univariate_metrics.py
lib/Metrics/test/: BUILD.bazel  test_L_estimators.py  test_univariate_metrics.py
lib/Solvers/: BUILD.bazel  dlt.py
lib/Solvers/test/: BUILD.bazel  test_dlt.py
lib/Transforms/CircleGroup/: BUILD.bazel  Complex.py  S1.py  main.ipynb
lib/Transforms/CircleGroup/test/: BUILD.bazel  test_circlegroup.py  test_complex.py
lib/Transforms/Interface/: BUILD.bazel  Transform.py
lib/Transforms/SE3/: BUILD.bazel  Se3.py
lib/Transforms/SO2/: SO2.py
lib/Transforms/SO3/: BUILD.bazel  SO3.ipynb  SO3.py  SO3_Utils.py  SO3_utils.py  main.ipynb
lib/Transforms/SO3/tests/: BUILD.bazel  testSO3.py  test_SO3_utils.py
lib/Transforms/conversions/: BUILD.bazel  conversions.py
lib/Transforms/conversions/tests/: BUILD.bazel  test_conversions.py
lib/Transforms/s3/: BUILD.bazel  s3.ipynb  s3.py
lib/Transforms/so3/: BUILD.bazel  so3.py
misc/: jupyter.py  rules.bzl
misc/flags/: BUILD.bazel
vonMisesFisher/: BUILD.bazel  vonMisesFisher.ipynb  vonMisesFisher.py
