load("@rules_python//python:pip.bzl", "compile_pip_requirements")


compile_pip_requirements(
    name = "requirements",
    src = ":requirements.in",
    generate_hashes = False,
    requirements_txt = ":requirements.txt",
)

# Used to enable global acces to the misc/jupyter.py file used to start jupyter from Bazel
filegroup(
    name = "jupyter",
    srcs = ["misc/jupyter.py"],
    visibility = ["//visibility:public"]
)