###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = 'vision', version = "1.0")
bazel_dep(name = "protobuf", version = "29.0-rc1")
bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.19.0", repo_name = "proto_bazel_features")
bazel_dep(name = "googletest", version = "1.17.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "notebooks",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "notebooks")

