py_library(
    name = "LinearInterpolation",
    srcs = ["LinearInterpolation.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//ProjectiveGeometry:Geometry"
    ]
)

load("@notebooks//:requirements.bzl", "requirement")


py_binary(
    name = "jupyter",
    srcs = ["jupyter.py"],
    deps = [
        "//BilinearInterpolation:LinearInterpolation",
        "//ProjectiveGeometry:Geometry",
        requirement("notebook")
    ]
)

