load("@notebooks//:requirements.bzl", "requirement")

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Math:Quaternions",
        "//lib/Transforms/SO3",
        requirement("numpy"),
        requirement("notebook"),
        requirement("matplotlib"),
        requirement("scipy"),
    ],
)
