py_library(
    name = "LinearInterpolation",
    srcs = ["LinearInterpolation.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//ProjectiveGeometry:Geometry"
    ]
)

py_library(
    name = "BilinearInterpolation",
    srcs = ["BilinearInterpolation.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//ProjectiveGeometry:Geometry",
        "//Interpolation:LinearInterpolation",
    ]
)

load("@notebooks//:requirements.bzl", "requirement")


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//Interpolation:LinearInterpolation",
        "//Interpolation:BilinearInterpolation",
        requirement("notebook"),
        requirement("matplotlib")
    ]
)
