load("@notebooks//:requirements.bzl", "requirement")

cc_library(
    name = "cell",
    srcs = ["src/cell.cpp"],
    hdrs = ["cell.h"],
    visibility = ["//visibility:public"],
)


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [        
        "//Mazes/pybind:cell",
        requirement("notebook"),
    ]
)
