load("@notebooks//:requirements.bzl", "requirement")

cc_library(
    name = "Mazes",
    srcs = [
        "src/cell.cpp",
        "src/grid.cpp",
    ],
    hdrs = [
        "cell.h",
        "grid.h"],
    visibility = ["//visibility:public"],
)


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [        
        "//Mazes/pybind:cell",
        requirement("notebook"),
    ]
)
