load("@notebooks//:requirements.bzl", "requirement")

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [        
        "//vonMisesFisher:vMF",
        "//lib/Transforms/SO3:SO3",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ]
)
