load("@notebooks//:requirements.bzl", "requirement")

py_library(
    name = "vMF",
    visibility = ["//visibility:public"],
    srcs = ["vonMisesFisher.py"],
    deps = [  
        "//lib/Math:Constants",
        "//lib/Math:Math_utils"
        ]
)


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Math:Constants",
        "//lib/Math:Math_utils",
        "//lib/Transforms/CircleGroup:S1",
        "//vonMisesFisher:vMF",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ]
)
