load("@notebooks//:requirements.bzl", "requirement")
load("@pybind11_bazel//:build_defs.bzl", "pybind_library", "pybind_extension")
load("//:misc/rules.bzl", "pybind_module")

pybind_module(
    name = "cell",
    srcs = ["cell_pybind.cpp"],
    visibility = ["//visibility:public"],
    deps = ["//Mazes:cell"]
)
