load("@notebooks//:requirements.bzl", "requirement")
load("//:misc/rules.bzl", "pybind_module")

pybind = False

py_library(
    name = "matrix" if not pybind else "none_py",
    srcs = ["matrix.py"],
    visibility = ["//visibility:public"],
)

pybind_module(
    name = "matrix" if pybind else "none_cpp",
    srcs = ["matrix.cpp"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        requirement("notebook"),
        requirement("matplotlib"),
        "//lib/LinearAlgebra:matrix",
    ],
)
