load("@notebooks//:requirements.bzl", "requirement")
load("//:misc/rules.bzl", "pybind_module")

config_setting(
    name = "use_cpp",
    flag_values = {"//misc/flags:selected_mode": "cpp"},
)

config_setting(
    name = "use_python",
    flag_values = {"//misc/flags:selected_mode": "py"},
)

py_library(
    name = "matrix_py",
    srcs = ["matrix.py"],
    visibility = ["//visibility:public"],
)

pybind_module(
    name = "matrix_cpp",
    srcs = ["matrix.cpp"],
    visibility = ["//visibility:public"],
)

alias(
    name = "matrix",
    actual = select({
        "use_cpp": ":matrix_cpp",
        "use_python": ":matrix_py",
    }),
    visibility = ["//visibility:public"],
)


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        requirement("notebook"),
        requirement("matplotlib"),
        ":matrix"
    ],
)
