py_library(
    name = "Constants",
    visibility = ["//visibility:public"],
    srcs = ["constants.py"]
)

py_library(
    name = "Math_utils",
    srcs = ["math_utils.py"],
    visibility = ["//visibility:public"]
)

py_library(
    name = "RotationUtils",
    srcs = ["RotationUtils/rotation_utils.py"],
    deps = [
        "//lib/Math:Math_utils",
    ],
    visibility = ["//visibility:public"]
)


py_library(
    name = "Quaternions",
    srcs = ["Quaternions/quaternions.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Math:Math_utils",
    ]
)

