load("@notebooks//:requirements.bzl", "requirement")


py_library(
    name = "Constants",
    visibility = ["//visibility:public"],
    srcs = ["constants.py"]
)

py_library(
    name = "Math_utils",
    srcs = ["math_utils.py"],
    visibility = ["//visibility:public"]
)

py_library(
    name = "RotationUtils",
    srcs = ["rotation_utils.py"],
    deps = [
        "//lib/Math:Math_utils",
        requirement("numpy"),
    ],
    visibility = ["//visibility:public"]
)


py_library(
    name = "Quaternions",
    srcs = ["quaternions.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Math:Math_utils",
    ]
)

py_library(
    name = "Triangulation",
    srcs = ["triangulation.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Math:Math_utils",
        "//lib/Math/Transforms/SE3:Se3",
    ]
)
