load("@notebooks//:requirements.bzl", "requirement")
load("@pybind11_bazel//:build_defs.bzl", "pybind_library", "pybind_extension")
load("//:misc/rules.bzl", "pybind_module")

py_library(
    name = "Metrics",
    srcs = [
        "L_estimators.py",
        "M_estimators.py"
        ],
    visibility = ["//visibility:public"],
    deps = [
    ]
)

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Metrics:Metrics",
        "//lib/Metrics:example",
        requirement("notebook"),
        requirement("matplotlib"),
        requirement("scipy")
    ]
)

pybind_module(
    name = "example",
    srcs = ["L_estimator.cpp"],
    visibility = ["//visibility:public"],
)