load("@notebooks//:requirements.bzl", "requirement")

py_library(
    name = "Complex",
    visibility = ["//visibility:public"],
    srcs = ["Complex.py"]
)

py_library(
    name = "S1",
    visibility = ["//visibility:public"],
    srcs = ["S1.py"],
    deps = [
        "//lib/Transforms/CircleGroup:Complex"
    ]
)

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Transforms/CircleGroup:S1",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ]
)
