load("@notebooks//:requirements.bzl", "requirement")

py_library(
    name = "SO3",
    visibility = ["//visibility:public"],
    srcs = ["SO3.py"],
    deps = [
        "//lib/Math:Quaternions",
        "//lib/Math:Constants",
        "//lib/Math:Math_utils"
    ]
)

py_library(
    name = "SO3Utils",
    visibility = ["//visibility:public"],
    srcs = ["SO3_utils.py"],
    deps = [
        "//lib/Transforms/SO3:SO3",
    ]
)


py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Transforms/SO3:SO3",
        "//vonMisesFisher:vMF",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ]
)
