load("@notebooks//:requirements.bzl", "requirement")

py_library(
    name = "SO3",
    srcs = ["SO3.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/LinearAlgebra:matrix",
        "//lib/Math:Constants",
        "//lib/Math:Math_utils",
        "//lib/Math:Quaternions",
    ],
)

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Math:Math_utils",
        "//lib/Transforms/SO3",
        "//vonMisesFisher:vMF",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ],
)
