load("@notebooks//:requirements.bzl", "requirement")

py_library(
    name = "s3",
    srcs = ["s3.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/LinearAlgebra:matrix",
        "//lib/Math:Constants",
        "//lib/Math:Math_utils",
        "//lib/Math:Quaternions",
    ],
)

py_binary(
    name = "jupyter",
    srcs = ["//:jupyter"],
    deps = [
        "//lib/Math:Math_utils",
        "//lib/Transforms/s3",
        requirement("scipy"),
        requirement("notebook"),
        requirement("matplotlib"),
    ],
)
