cc_test(
    name = "test_inheritance",
    size = "small",
    srcs = ["test_inheritance.cpp"],
    deps = [
        "//DesignPatterns/CompositionOverInheritance:inheritance_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_composition",
    size = "small",
    srcs = ["test_composition.cpp"],
    deps = [
        "//DesignPatterns/CompositionOverInheritance:composition_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)