load("@notebooks//:requirements.bzl", "requirement")

py_test(
    name = "testSO3",
    srcs = ["testSO3.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Transforms/SO3",
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_test(
    name = "test_SO3_utils",
    srcs = ["test_SO3_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Transforms/SO3:SO3_Utils",
        requirement("numpy"),
        requirement("scipy"),
    ],
)
