load("@notebooks//:requirements.bzl", "requirement")

py_test(
    name = "testSO3",
    srcs = ["testSO3.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/Transforms/SO3",
        "//lib/Math:Math_utils",
        requirement("numpy"),
        requirement("scipy"),
    ],
)
